--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
-    "@rails/webpacker": "^4.0.2",
+    "@rails/webpacker": "^4.2.2",
+    "fsevents": "^2.1.2",
+    "node-sass": "^4.13.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
